Fixed submit answer popup alignment issue for CP

--- a/libraries/H5P.Blanks-1.14/css/blanks.css
+++ b/libraries/H5P.Blanks-1.14/css/blanks.css
@@ -117,8 +117,13 @@
   font-family: Arial, sans-serif;
 }
 
-.h5p-blanks .h5p-question-buttons.right-align {
+.h5p-element-inner.h5p-blanks .h5p-question-buttons.right-align {
   width: 100% !important;
+  text-align: right !important;
+}
+
+.h5p-button-element.h5p-blanks .h5p-question-buttons.right-align {
+  width: calc(100% - 2em) !important;
   text-align: right !important;
 }
 
